--- a/BudgetTrackerApp/Components/Pages/PageHome.razor
+++ b/BudgetTrackerApp/Components/Pages/PageHome.razor
@@ -4,14 +4,4 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
-
-
-<h1>Perso</h1>
-
-<p>Texte perso</p>
-
-<DatabaseSelector />
-
+<MudText Typo="Typo.h4" Class="my-8">Home</MudText>
