--- a/BudgetTrackerApp/Components/Shared/DatabaseExport.razor
+++ b/BudgetTrackerApp/Components/Shared/DatabaseExport.razor
@@ -4,8 +4,8 @@
 @inject DatabaseExportService ExportService
 @inject IJSRuntime JS
 
-<MudIconButton Icon="@Icons.Material.Filled.FileDownload" 
-               Color="Color.Default" 
+<MudIconButton Icon="@Icons.Material.Filled.CloudDownload"
+               Color="Color.Inherit"
                Size="Size.Medium" 
                Variant="Variant.Text"
                OnClick="DownloadBackup" />
