--- a/BudgetTrackerApp/Components/Layout/NavMenu.razor
+++ b/BudgetTrackerApp/Components/Layout/NavMenu.razor
@@ -12,5 +12,7 @@
         <MudNavLink Href="importfile" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.FileUpload">Importer fichiers</MudNavLink>
     </MudNavGroup>
 
+    <MudNavLink Href="InputPea" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Category">Saisie Pea</MudNavLink>
+    <MudNavLink Href="peawallet" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Category">peawallet</MudNavLink>
 
 </MudNavMenu>
