--- a/BudgetTrackerApp/Components/Pages/PageCompteCourant.razor
+++ b/BudgetTrackerApp/Components/Pages/PageCompteCourant.razor
@@ -3,6 +3,7 @@
 
 @using BudgetTrackerApp.Data
 @using BudgetTrackerApp.Data.Services
+@using BudgetTrackerApp.Models
 @using Microsoft.EntityFrameworkCore;
 
 @using BudgetTrackerApp.Components.Shared
