--- a/BudgetTrackerApp/Components/Layout/NavMenu.razor
+++ b/BudgetTrackerApp/Components/Layout/NavMenu.razor
@@ -2,7 +2,7 @@
 <MudNavMenu>
     <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
     <MudNavLink Href="dashboardcomptecourant" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Insights">Dashboard Complet</MudNavLink>
-    <MudNavLink Href="dashboardcomptecourant" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.StackedBarChart">Dashboard CC</MudNavLink>
+    <MudNavLink Href="cc-evolution" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.StackedBarChart">Dashboard CC</MudNavLink>
     
     <MudNavGroup Title="Comptes courant" Expanded="true" Icon="@Icons.Material.Filled.Edit">
         <MudNavLink Href="ListCategories" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Category">Catégories</MudNavLink>
