Renommage de la table PEA en OperationsPea. Ajout de la simulation de json en option.

--- a/BudgetTrackerApp/Components/Layout/NavMenu.razor
+++ b/BudgetTrackerApp/Components/Layout/NavMenu.razor
@@ -13,6 +13,6 @@
     </MudNavGroup>
 
     <MudNavLink Href="InputPea" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Category">Saisie Pea</MudNavLink>
-    <MudNavLink Href="peawallet" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Category">peawallet</MudNavLink>
+    <MudNavLink Href="peawallet" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.AccountBalanceWallet">peawallet</MudNavLink>
 
 </MudNavMenu>
